@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 22-09-2005 added: support for prefix and suffix in regexp matching. (specific matches without removing what was matched from displayed name)
  - 22-09-2005 added: parameter validation for logpath
  - 21-09-2005 changed: reversed and fixed double xboxmediacenter.xml settings issue if home path was set [GeminiServer]
  - 21-09-2005 fixed: reading settings from xboxmediacenter.xml  was broken! This should solve other issues! [GeminiServer]
